2008-04-21  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Darin.

        Move collector main thread initialization from WebKit/win to KJS::initializeThreading.

        * WebView.cpp:
        (WebView::WebView):

2008-04-18  Jon Honeycutt  <jhoneycutt@apple.com>

        Reviewed by Darin.

        Implement get_accRole().

        * AccessibleBase.cpp:
        (AccessibleBase::get_accRole): Report the result of role().
        (MSAARole): Added; returns the MSAA role for a WebCore role.
        (AccessibleBase::role): Return the MSAA role for the object's roleValue.
        * AccessibleBase.h: Add declaration for role().

2008-04-18  Jon Honeycutt  <jhoneycutt@apple.com>

        Reviewed by Darin.

        Implement get_accName(), get_accValue(), get_accDescription(). Added
        virtual methods that accessible objects can override to customize the
        result.

        * AccessibleBase.cpp:
        (AccessibleBase::get_accName): Report result of name().
        (AccessibleBase::get_accValue): Report result of value().
        (AccessibleBase::get_accDescription): Report result of description().
        (AccessibleBase::name): Added; returns AccessibilityObject::title().
        (AccessibleBase::value): Added; returns
        AccessibilityObject::stringValue().
        (AccessibleBase::description): Added; returns
        AccessibilityObject::accessibilityDescription().
        * AccessibleBase.h: Added declarations for name(), value(), and
        description().
        * ChangeLog: Fix my misuse of "definition."

2008-04-18  Jon Honeycutt  <jhoneycutt@apple.com>

        Fix build after r32231.

        * WebFrame.cpp:
        (WebFrame::renderTreeAsExternalRepresentation): renderer() ->
        contentRenderer()

2008-04-18  Jon Honeycutt  <jhoneycutt@apple.com>

        Fix build after r32231.

        * WebView.cpp:
        (WebView::paintIntoBackingStore): renderer() -> contentRenderer()
        (WebView::elementAtPoint): Same.
