@@ -1,3 +1,12 @@
+2008-04-19  Jon Honeycutt  <jhoneycutt@apple.com>
+
+        Reviewed by Darin.
+
+        Implement get_accState().
+
+        * AccessibleBase.cpp:
+        (AccessibleBase::get_accState):
+
 2008-04-21  Alexey Proskuryakov  <ap@webkit.org>
 
         Reviewed by Darin.
